# discord-gamestatus

./: .dockerignore  .env.example  .eslintrc.json  .gitignore  .pre-commit-config.yaml  .sqlfluff  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  clippy.toml  docker-compose.yml  index.js  package-lock.json  package.json  run-tests.mjs  tsconfig.json  tsfmt.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: BUG-REPORT.yml  FEATURE-REQUEST.yml  config.yml
.github/workflows/: ci.yml  node.yml  npmpublish.yml  publish.yml  run.yml
bot/: .eslintrc.json  .sqlfluff  package-lock.json  package.json  tsconfig.json
bot/scripts/: setup-db.sh
bot/src/: checks.ts  constants.ts  debug.ts  index.ts  query.ts  stateChanges.ts  utils.ts
dispatcher/: .eslintrc.json  README.md  package.json  tsconfig.json
dispatcher/src/: embed.ts  index.ts  query.ts  types.ts
docker/: Dockerfile.bot  Dockerfile.dispatcher  Dockerfile.scheduler
langs/: en.json
scheduler/: Cargo.toml
scheduler/.cargo/: config.toml
scheduler/src/: constants.rs  database.rs  lib.rs  main.rs  metrics.rs  types.rs
scripts/: migrate.js  schema.sql  setup-db.sh  start.sh
scripts/schemas/: 1.sql  2.sql  3.sql  4.sql
src/: checks.js  checks.ts  connectDiff.js  constants.js  constants.ts  dblapi.js  dblapi.ts  debug.js  debug.ts  embed.js  index.js  index.ts  limits.js  limits.ts  query.js  query.ts  stateChanges.js  stateChanges.ts  sweep.js  util.js  utils.js  utils.ts
src/commands/: activateGuild.ts  botinfo.js  botinfo.ts  dumpticks.js  gamelist.js  gamelist.ts  (+21 more)
(+49 files in other folders)
