[package]
name = "gamestatus-scheduler"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default=["metrics"]
metrics = ["dep:prometheus", "dep:lazy_static"]

[dependencies]
tokio = { version="1", features=["full"] }
tokio-postgres = { version="0.7", features=["with-serde_json-1"] }
futures-util = "0.3"
serde = "1"
serde_json = "1"
lazy_static = { version="1.4", optional=true }
prometheus = { version="0.13", optional=true }
